--- a/MVVMKitApp/Base.lproj/Main.storyboard
+++ b/MVVMKitApp/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--EmployeeDetailViewController-->
         <scene sceneID="vXj-eI-swo">
             <objects>
-                <viewController title="EmployeeDetailViewController" id="iJz-P0-fau" customClass="EmployeeDetailViewController" customModule="MVVMKitApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EmployeeDetailViewController" title="EmployeeDetailViewController" id="iJz-P0-fau" customClass="EmployeeDetailViewController" customModule="MVVMKitApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JZf-RM-Qx2">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
